--- a/app/cart/cart.module.css
+++ b/app/cart/cart.module.css
@@ -10,3 +10,46 @@
     justify-content: center;
     margin-left: 40vw;
  }
+
+ .leftSideDiv{
+    width: 55vw;
+ }
+
+ .cartitemsDiv{
+    display: flex;
+    justify-content: space-between;
+    width:88vw;
+ }
+
+ .totalCardMain{
+    background-color: #c1ffd7e3;
+    box-shadow: 0px 1px 8px hsla(0,0%,80%,.5);
+    width: 20vw;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 25px;
+    border-radius: 10px;
+ }
+
+ .totalCardMain button {
+    background-color: #007a78;
+    width: 100%;
+    border: none;
+    height: 40px;
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
+ }
+
+ .totalCardMain b {
+    font-size: 20px;
+    font-weight: 700;
+    margin: 20px 0px;
+ }
+
+ .totalCardMain span {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 4px 0px;
+ }
